--- a/arxiv/2020_03_arxiv.html
+++ b/arxiv/2020_03_arxiv.html
@@ -182,6 +182,33 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2003.04162">https://arxiv.org/abs/2003.04162</a></span> Phenomenological theory in reentrant uranium-based superconductors<span class="Apple-converted-space"> </span></p>
 <p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2003.04082">https://arxiv.org/abs/2003.04082</a></span> Weyl semimetals and spinc cobordism *******</p>
 <p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2003.04144">https://arxiv.org/abs/2003.04144</a></span> Dissipation in Lagrangian formalism<span class="Apple-converted-space"> </span></p>
+<br>
+<p class="p1">20200311</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.04328">https://arxiv.org/abs/2003.04328</a></span> Bulk Anyons as Edge Symmetries: Boundary Phase Diagrams of Topologically Ordered States ***(Edy Stern, Erez Berg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.03926">https://arxiv.org/abs/2003.03926</a></span> Spectral characterization of non-Gaussian quantum noise: Keldysh approach and application to photon shot noise<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.04349">https://arxiv.org/abs/2003.04349</a></span> Toward a 3d Ising model with a weakly-coupled string theory dual *** (McGreevy)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.04405">https://arxiv.org/abs/2003.04405</a></span> The double scaled limit of Super–Symmetric SYK models *** (SYK model)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.04324">https://arxiv.org/abs/2003.04324</a></span> Intertwined Order in Fractional Chern Insulators from Finite-Momentum Pairing of Composite Fermions ** (Fradkin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1905.05533">https://arxiv.org/abs/1905.05533</a></span> The SU(2) Wess-Zumino-Witten spin chain sigma model<span class="Apple-converted-space"> </span></p>
+<p class="p2"><br></p>
+<p class="p1">20200312</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.05373">https://arxiv.org/abs/2003.05373</a></span> Lattice modulation spectroscopy of one-dimensional quantum gases: Universal scaling of the absorbed energy (Michael Knap)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.05181">https://arxiv.org/abs/2003.05181</a></span> Time-induced second-order topological superconductors<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.04909">https://arxiv.org/abs/2003.04909</a></span> Topological phase transitions in four dimensions ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.05401">https://arxiv.org/abs/2003.05401</a></span> Correlated Disorder in the SYK2 model *** (SYK model)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.04901">https://arxiv.org/abs/2003.04901</a></span> Disorder-free localization in an interacting two-dimensional lattice gauge theory ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.05098">https://arxiv.org/abs/2003.05098</a></span> Landau poles in condensed matter systems *** (Shao-Kai Jian, Das Sarma)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.00915">https://arxiv.org/abs/2003.00915</a></span> On dimension of tetrads in effective gravity ** (Volovik)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1507.02010">https://arxiv.org/abs/1507.02010</a></span> Heisenberg’s original derivation of the uncertainty principle and its universally valid reformulations<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.05433">https://arxiv.org/abs/2003.05433</a></span> Precision Theory of Electroweak Interactions<span class="Apple-converted-space"> </span></p>
+<p class="p2"><br></p>
+<p class="p1">20200313</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.05453">https://arxiv.org/abs/2003.05453</a></span> Topology and edge states survive quantum criticality between topological insulators ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.05638">https://arxiv.org/abs/2003.05638</a></span> Floquet and Anomalous Floquet Weyl Semimetals **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.05804">https://arxiv.org/abs/2003.05804</a></span> The Ising model in a light-induced quantized transverse field **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1912.04326">https://arxiv.org/abs/1912.04326</a></span> Phase transition and chaos in charged SYK model *** (SYK model)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2001.02768">https://arxiv.org/abs/2001.02768</a></span> Supersymmetric Yang-Mills Theories: not quite the usual perspective<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.05736">https://arxiv.org/abs/2003.05736</a></span> Symmetries in Foundation of Quantum Theory and Mathematics<span class="Apple-converted-space"> </span></p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
