--- a/index.html
+++ b/index.html
@@ -353,6 +353,12 @@ Theoretical Physics, Condensed matter physics, Strongly correlated systems, Quan
 	</li></ul>
 	<div class="cvitemize"> Contributed Talks and Posters </div>
 		<ul><li><div>
+		<span class="cvitem"> (Virtual) APS March Meeting 2020 (Talk) </span>
+		<span class="cvperiod">March 2020</span>
+		</div>
+		<div class="cvitemcontent"> <a href="http://meetings.aps.org/Meeting/MAR20/Session/G50.13">"Quantum criticalities with lattice vibrations"</a> </div>	
+
+		</li><li><div>
 		<span class="cvitem"> 12th BK21+ Young Physicists Workshop (Talk) </span>
 		<span class="cvperiod">February 2020</span>
 		</div>
