--- a/arxiv/2020_03_arxiv.html
+++ b/arxiv/2020_03_arxiv.html
@@ -208,7 +208,47 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.05804">https://arxiv.org/abs/2003.05804</a></span> The Ising model in a light-induced quantized transverse field **</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1912.04326">https://arxiv.org/abs/1912.04326</a></span> Phase transition and chaos in charged SYK model *** (SYK model)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2001.02768">https://arxiv.org/abs/2001.02768</a></span> Supersymmetric Yang-Mills Theories: not quite the usual perspective<span class="Apple-converted-space"> </span></p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.05736">https://arxiv.org/abs/2003.05736</a></span> Symmetries in Foundation of Quantum Theory and Mathematics<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.05736">https://arxiv.org/abs/2003.05736</a></span> Symmetries in Foundation of Quantum Theory and Mathematics<span class="Apple-converted-space"> </span></p><br>
+<p class="p1">20200316</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.06220">https://arxiv.org/abs/2003.06220</a></span> Phonon anharmonicity enhances the Tc of BCS-type superconductors<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.05954">https://arxiv.org/abs/2003.05954</a></span> Emergent QCD3 Quantum Phase Transitions of Fractional Chern Insulators<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.06395">https://arxiv.org/abs/2003.06395</a></span> Semiclassical Approximation meets Keldysh-Schwinger diagrammatic technique: Scalar φ4<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.05948">https://arxiv.org/abs/2003.05948</a></span> Topology of superconductors beyond mean-field theory ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1907.05354">https://arxiv.org/abs/1907.05354</a></span> Interplay of topology and electron-electron interactions in Rarita–Schwinger–Weyl semimetals *** (Igor Boettcher)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1909.04662">https://arxiv.org/abs/1909.04662</a></span> One-loop renormalization in Galileon effective field theory<span class="Apple-converted-space"> </span></p>
+<p class="p2"><br></p>
+<p class="p1">20200317</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.06776">https://arxiv.org/abs/2003.06776</a></span> Stability of two-dimensional asymmetric materials with a quadratic band crossing point under four-fermion interaction and impurity scattering *** (RG)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.07052">https://arxiv.org/abs/2003.07052</a></span> Topological superconductivity in EuS/Au/superconductor heterostructures<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.06715">https://arxiv.org/abs/2003.06715</a></span> Non-Hermitian three-dimensional two-band Hopf insulator *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.06663">https://arxiv.org/abs/2003.06663</a></span> On the classification of topological orders *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.06619">https://arxiv.org/abs/2003.06619</a></span> Optical signatures of shear collective modes in strongly interacting Fermi liquids</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.06470">https://arxiv.org/abs/2003.06470</a></span> Z2 × Z2-graded mechanics: the classical theory<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.06238">https://arxiv.org/abs/2003.06238</a></span> Hamilton-Jacobi Treatment of Superstring and Quantization of Fields with Constraints<span class="Apple-converted-space"> </span></p>
+<p class="p2"><br></p>
+<p class="p1">20200318</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.07597">https://arxiv.org/abs/2003.07597</a></span> Non-Bloch band theory of non-Hermitian Hamiltonians in the symplectic class *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.07812">https://arxiv.org/abs/2003.07812</a></span> Phase diagram of the Z3-Fock parafermion chain with pair hopping **</p>
+<p class="p3"><a href="https://arxiv.org/abs/2003.07381">https://arxiv.org/abs/2003.07381</a><span class="s2"> Chaos in the QFT S-matrix *****</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.07556">https://arxiv.org/abs/2003.07556</a></span> Spontaneous spin-loop-current order mediated by transverse spin fluctuations in cuprate superconductors **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.07667">https://arxiv.org/abs/2003.07667</a></span> Mean-field theory of interacting triplons in a two-dimensional valence-bond solid<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1811.11577">https://arxiv.org/abs/1811.11577</a></span> Why is quantum gravity so difficult (compared to QCD)?<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1912.09479">https://arxiv.org/abs/1912.09479</a></span> Renormalization Group Flows, the a-Theorem and Conformal Bootstrap<span class="Apple-converted-space"> </span></p>
+<p class="p2"><br></p>
+<p class="p1">20200319</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.07994">https://arxiv.org/abs/2003.07994</a></span> Fermion Dynamical Symmetry and Strongly-Correlated Electrons: A Comprehensive Model of High-Temperature Superconductivity ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.08055">https://arxiv.org/abs/2003.08055</a></span> Floquet Topological Phases of Non-Hermitian Disordered Systems<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.08120">https://arxiv.org/abs/2003.08120</a></span> Time’s Arrow and the Fragility of Topological Phases<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.08252">https://arxiv.org/abs/2003.08252</a></span> The Floquet Engineer’s Handbook *******</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.08368">https://arxiv.org/abs/2003.08368</a></span> Phases of the (2+1) dimensional SO(5) non-linear sigma model with topological term ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.08183">https://arxiv.org/abs/2003.08183</a></span> Universal behavior in the Nernst effect of heavy fermion materials<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.07895">https://arxiv.org/abs/2003.07895</a></span> Renormalization and conformal invariance of non-local quantum electrodynamics ***</p>
+<p class="p2"><br></p>
+<p class="p1">20200320</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.08672">https://arxiv.org/abs/2003.08672</a></span> Role of Nambu-Goldstone modes in the fermionic superfluid point contact<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.08419">https://arxiv.org/abs/2003.08419</a></span> Multiband Quantum Criticality of Polar Metals *** (Premi Chandra)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.08397">https://arxiv.org/abs/2003.08397</a></span> Towards the QED beta function and renormalons at 1/Nf2 and 1/Nf3 **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1812.01509">https://arxiv.org/abs/1812.01509</a></span> Nonperturbative Topological Phenomena in QCD and Related Theories **</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
