--- a/arxiv/2020_03_arxiv.html
+++ b/arxiv/2020_03_arxiv.html
@@ -250,26 +250,26 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.08397">https://arxiv.org/abs/2003.08397</a></span> Towards the QED beta function and renormalons at 1/Nf2 and 1/Nf3 **</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1812.01509">https://arxiv.org/abs/1812.01509</a></span> Nonperturbative Topological Phenomena in QCD and Related Theories **</p><br>
 <p class="p1">20200323</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs2003.08945">https://arxiv.org/abs2003.08945</a></span> Observation of gauge invariance in a 71-site quantum simulator<span class="Apple-converted-space"> </span></p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs2003.08898">https://arxiv.org/abs2003.08898</a></span> Classification of topological phases with finite internal symmetries in all dimensions **** (Xiao-Gang Wen)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs2003.09243">https://arxiv.org/abs2003.09243</a></span> Flat band superconductivity in the square-octagon lattice ***</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs2003.09226">https://arxiv.org/abs2003.09226</a></span> Critical properties of the valence-bond-solid transition in lattice quantum electrodynamics *** (Joseph Maciejko)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.08945">https://arxiv.org/abs/2003.08945</a></span> Observation of gauge invariance in a 71-site quantum simulator<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.08898">https://arxiv.org/abs/2003.08898</a></span> Classification of topological phases with finite internal symmetries in all dimensions **** (Xiao-Gang Wen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.09243">https://arxiv.org/abs/2003.09243</a></span> Flat band superconductivity in the square-octagon lattice ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.09226">https://arxiv.org/abs/2003.09226</a></span> Critical properties of the valence-bond-solid transition in lattice quantum electrodynamics *** (Joseph Maciejko)</p>
 <p class="p2"><br></p>
 <p class="p1">20200324</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs2003.10361">https://arxiv.org/abs2003.10361</a></span> Nodal Semimetals : A Survey on Optical Conductivity<span class="Apple-converted-space"> </span></p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs2003.10331">https://arxiv.org/abs2003.10331</a></span> Varying Newton constant and black hole quantization ** (Volovik)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs2003.10390">https://arxiv.org/abs2003.10390</a></span> Generalized f-Sum Rules and Kohn formulas on Non-linear Conductivities ***** (Haruki Watanabe, Masaki Oshikawa)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs2003.09429">https://arxiv.org/abs2003.09429</a></span> Fracton hydrodynamics *** (Andrew Lucas, Rahul M. Nandkishore)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs2003.09431">https://arxiv.org/abs2003.09431</a></span> Normal state properties of quantum critical metals at finite temperature *** (Erez Berg, Andrey Chubukov)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs2003.09645">https://arxiv.org/abs2003.09645</a></span> Competition of Pairing and Nematicity in the Two-Dimensional Electron Gas ****</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs2003.09653">https://arxiv.org/abs2003.09653</a></span> Non-equilibrium Properties of Berezinskii-Kosterlitz-Thouless Phase Transitions<span class="Apple-converted-space"> </span></p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs2003.09766">https://arxiv.org/abs2003.09766</a></span> Subsystem R ́enyi Entropy of Thermal Ensembles for SYK-like models **** (SYK model)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs1908.08451">https://arxiv.org/abs1908.08451</a></span> CAUSAL FERMION SYSTEMS: AN ELEMENTARY INTRODUCTION TO PHYSICAL IDEAS AND MATHEMATICAL CONCEPTS<span class="Apple-converted-space"> </span></p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs2003.10068">https://arxiv.org/abs2003.10068</a></span> The higher-order nonrelativistic Hamiltonian of electromagnetic system **</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs2003.10370">https://arxiv.org/abs2003.10370</a></span> Local duality symmetry in gauge field theories<span class="Apple-converted-space"> </span></p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs1902.10516">https://arxiv.org/abs1902.10516</a></span> No anomalous canonical commutators induced by Berry’s phase *** (Kazuo Fujikawa)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs2003.05401">https://arxiv.org/abs2003.05401</a></span> Correlated Disorder in the SYK2 model<span class="Apple-converted-space"> </span></p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs2003.09974">https://arxiv.org/abs2003.09974</a></span> Naturalness in Nuclear Effective Field Theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.10361">https://arxiv.org/abs/2003.10361</a></span> Nodal Semimetals : A Survey on Optical Conductivity<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.10331">https://arxiv.org/abs/2003.10331</a></span> Varying Newton constant and black hole quantization ** (Volovik)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.10390">https://arxiv.org/abs/2003.10390</a></span> Generalized f-Sum Rules and Kohn formulas on Non-linear Conductivities ***** (Haruki Watanabe, Masaki Oshikawa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.09429">https://arxiv.org/abs/2003.09429</a></span> Fracton hydrodynamics *** (Andrew Lucas, Rahul M. Nandkishore)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.09431">https://arxiv.org/abs/2003.09431</a></span> Normal state properties of quantum critical metals at finite temperature *** (Erez Berg, Andrey Chubukov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.09645">https://arxiv.org/abs/2003.09645</a></span> Competition of Pairing and Nematicity in the Two-Dimensional Electron Gas ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.09653">https://arxiv.org/abs/2003.09653</a></span> Non-equilibrium Properties of Berezinskii-Kosterlitz-Thouless Phase Transitions<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.09766">https://arxiv.org/abs/2003.09766</a></span> Subsystem R ́enyi Entropy of Thermal Ensembles for SYK-like models **** (SYK model)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1908.08451">https://arxiv.org/abs/1908.08451</a></span> CAUSAL FERMION SYSTEMS: AN ELEMENTARY INTRODUCTION TO PHYSICAL IDEAS AND MATHEMATICAL CONCEPTS<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.10068">https://arxiv.org/abs/2003.10068</a></span> The higher-order nonrelativistic Hamiltonian of electromagnetic system **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.10370">https://arxiv.org/abs/2003.10370</a></span> Local duality symmetry in gauge field theories<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1902.10516">https://arxiv.org/abs/1902.10516</a></span> No anomalous canonical commutators induced by Berry’s phase *** (Kazuo Fujikawa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.05401">https://arxiv.org/abs/2003.05401</a></span> Correlated Disorder in the SYK2 model<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.09974">https://arxiv.org/abs/2003.09974</a></span> Naturalness in Nuclear Effective Field Theories</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
