--- a/arxiv/2020_03_arxiv.html
+++ b/arxiv/2020_03_arxiv.html
@@ -269,7 +269,34 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.10370">https://arxiv.org/abs/2003.10370</a></span> Local duality symmetry in gauge field theories<span class="Apple-converted-space"> </span></p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1902.10516">https://arxiv.org/abs/1902.10516</a></span> No anomalous canonical commutators induced by Berry’s phase *** (Kazuo Fujikawa)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.05401">https://arxiv.org/abs/2003.05401</a></span> Correlated Disorder in the SYK2 model<span class="Apple-converted-space"> </span></p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.09974">https://arxiv.org/abs/2003.09974</a></span> Naturalness in Nuclear Effective Field Theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.09974">https://arxiv.org/abs/2003.09974</a></span> Naturalness in Nuclear Effective Field Theories</p><br>
+<p class="p1">20200325</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.10464">https://arxiv.org/abs/2003.10464</a></span> Induced Half-Metallicity and Gapless Topological Superconductivity in the CrI3-Pb Interface (Yuval Oleg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.10466">https://arxiv.org/abs/2003.10466</a></span> Exotic Symmetries, Duality, and Fractons in 2 + 1-Dimensional Quantum Field Theory ***** (Nathan Seiberg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.10872">https://arxiv.org/abs/2003.10872</a></span> Dispersion-free optical activity in non-centrosymmetric metals ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.10993">https://arxiv.org/abs/2003.10993</a></span> Emergence of generalized hydrodynamics in the non-local Luttinger model<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1909.04836">https://arxiv.org/abs/1909.04836</a></span> Topological theory of physical fields<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.11007">https://arxiv.org/abs/2003.11007</a></span> The four postulates of quantum mechanics are three<span class="Apple-converted-space"> </span></p>
+<p class="p2"><br></p>
+<p class="p1">20200326</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.11240">https://arxiv.org/abs/2003.11240</a></span> Two-photon driven magnon-pair resonance as a signature for spin-nematic orders<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.11131">https://arxiv.org/abs/2003.11131</a></span> HOW TO SPLIT THE ELECTRON IN HALF ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.11251">https://arxiv.org/abs/2003.11251</a></span> Efficient generation of extreme terahertz harmonics in 3D Dirac Semimetals<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.11040">https://arxiv.org/abs/2003.11040</a> </span>Machine Learning for Quantum Matter<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.11130">https://arxiv.org/abs/2003.11130</a></span> Thermal Hall effect in the pseudogap phase of cuprates<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1906.04939">https://arxiv.org/abs/1906.04939</a></span> Geometric approach to quantum theory<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1909.01791">https://arxiv.org/abs/1909.01791</a></span> Conservation of energy-momentum of matter as the basis for the gauge theory of gravitation<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.10370">https://arxiv.org/abs/2003.10370</a></span> Local duality symmetry in gauge field theories<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.09766">https://arxiv.org/abs/2003.09766</a></span> Subsystem R ́enyi Entropy of Thermal Ensembles for SYK-like models<span class="Apple-converted-space"> </span></p>
+<p class="p2"><br></p>
+<p class="p1">20200327</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.11745">https://arxiv.org/abs/2003.11745</a></span> Quantum quench, large N, and symmetry restoration<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.11550">https://arxiv.org/abs/2003.11550</a></span> Anomaly inflow and p-form gauge theories *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.11553">https://arxiv.org/abs/2003.11553</a></span> Absolute anomalies in (2+1)D symmetry-enriched topological states and exact (3+1)D constructions<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.11573">https://arxiv.org/abs/2003.11573</a></span> Extracting non-Fermi liquid fermionic self-energy at <i>T </i>= 0 from quantum Monte Carlo data **** (Kai Sun, Andrey Chubukov, Zi Yang Meng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.11876">https://arxiv.org/abs/2003.11876</a></span> Emergence of nematic paramagnet via quantum order-by-disorder and pseudo-Goldstone modes in Kitaev magnets *** (Hae-Young Kim, Yong Baek Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.02371">https://arxiv.org/abs/2002.02371</a></span> Joseph Polchinski: A Biographical Memoir *** (Steven Weinberg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.12932">https://arxiv.org/abs/2002.12932</a></span> Non-Liquid Cellular States: Gluing Gauge-(Higher)-Symmetry-Breaking vs -Extension Interfacial Defects **** (Juven Wang)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
