--- a/arxiv/2020_03_arxiv.html
+++ b/arxiv/2020_03_arxiv.html
@@ -296,7 +296,23 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.11573">https://arxiv.org/abs/2003.11573</a></span> Extracting non-Fermi liquid fermionic self-energy at <i>T </i>= 0 from quantum Monte Carlo data **** (Kai Sun, Andrey Chubukov, Zi Yang Meng)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.11876">https://arxiv.org/abs/2003.11876</a></span> Emergence of nematic paramagnet via quantum order-by-disorder and pseudo-Goldstone modes in Kitaev magnets *** (Hae-Young Kim, Yong Baek Kim)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.02371">https://arxiv.org/abs/2002.02371</a></span> Joseph Polchinski: A Biographical Memoir *** (Steven Weinberg)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.12932">https://arxiv.org/abs/2002.12932</a></span> Non-Liquid Cellular States: Gluing Gauge-(Higher)-Symmetry-Breaking vs -Extension Interfacial Defects **** (Juven Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.12932">https://arxiv.org/abs/2002.12932</a></span> Non-Liquid Cellular States: Gluing Gauge-(Higher)-Symmetry-Breaking vs -Extension Interfacial Defects **** (Juven Wang)</p><br>
+<p class="p1">20200330</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.12070">https://arxiv.org/abs/2003.12070</a></span> Transport properties of multilayer graphene **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.12119">https://arxiv.org/abs/2003.12119</a></span> Floquet spectrum for anisotropic and tilted Dirac materials under linearly polarized light at all field intensities<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.12566">https://arxiv.org/abs/2003.12566</a></span> Higher-order topological superconductors in P-, T -odd quadrupolar Dirac meterials **** (Bitan Roy)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.12351">https://arxiv.org/abs/2003.12351</a></span> Observation of the in-plane magnetic field-induced phase transitions in FeSe ***(Ki Seok Kim, E.-G. Moon, Jun Sung Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.12497">https://arxiv.org/abs/2003.12497</a></span> Disorder-free localization in a simple U(1) lattice gauge theory **** (Johannes Knolle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.12202">https://arxiv.org/abs/2003.12202</a></span> Nematic quantum criticality in an Fe-based superconductor revealed by strain-tuning ** (Steven Kivelson)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1911.06431">https://arxiv.org/abs/1911.06431</a></span> Hydrodynamic transport in the Luttinger-Abrikosov-Beneslavskii non-Fermi liquid *** (Igor Herbut)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.09429">https://arxiv.org/abs/2003.09429</a></span> Fracton hydrodynamics ** (Andrey Gromov, Andrew Lucas, Rahul M. Nandkishore)</p>
+<p class="p2"><br></p>
+<p class="p1">20200331</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.12675">https://arxiv.org/abs/2003.12675</a></span> Many-Body Localization from Dynamical Gauge Fields **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.13136">https://arxiv.org/abs/2003.13136</a></span> Systematic Resummation of the Large N expansion of Vector Models: Application to the Hubbard model and 2 + 1 dimensional QED<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.12993">https://arxiv.org/abs/2003.12993</a></span> Computing the renormalization group flow of two-dimensional φ4 theory with tensor networks *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.12998">https://arxiv.org/abs/2003.12998</a></span> U(1)-Symmetry protected Dirac nodal loops of triplons in SrCu2(BO3)2<span class="Apple-converted-space"> </span></p>
+<p class="p3"><a href="https://arxiv.org/abs/2003.12683">https://arxiv.org/abs/2003.12683</a><span class="s2"> Dirac and the Path Integral<span class="Apple-converted-space"> </span></span></p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
