--- a/arxiv/2020_04_arxiv.html
+++ b/arxiv/2020_04_arxiv.html
@@ -4,7 +4,7 @@
 <title>SangEun Han</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=2.0, user-scalable=yes"/>
-
+<meta charset="utf-8">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="icon" href="favicon.ico" type="image/x-icon">
 <!-- png favicon--> 
@@ -84,9 +84,7 @@ a:hover {text-decoration: underline; color: darkgray;}
 #center {font-size:10pt; width:900px; background-color:FFFFFF; font-family:Open Sans; padding-top:5px;padding-right:10px; padding-bottom:5px; padding-left:10px; margin:0 auto; }
 }
 
-#lastcenter {width:100%; background-color:FFFFFF; text-align:center;
-        margin: 0;
-        padding: 0;}
+#last {width:100%; background-color:FFFFFF; text-align:center;}
 
 .cvitemize { font-size:110%; font-weight: bold;}
 .cvitem { font-weight: bold; font-family:Open Sans;}
@@ -106,12 +104,40 @@ a:hover {text-decoration: underline; color: darkgray;}
 </script>
  <link href='//fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 </head>
-
-<body style="background-color:#FFFFFF">
+<style type="text/css">
+    p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px 'Open Sans'}
+    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px 'Open Sans'; min-height: 14.0px}
+    p.p3 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px 'Open Sans'; color: #dca10d}
+    span.s1 {color: #000000}
+    span.s2 {color: #000000}
+    span.s3 {color: #000000}
+    span.s4 {font: 12.0px '.Apple SD Gothic NeoI'; color: #dca10d}
+    span.s5 {color: #000000}
+  </style>
+<body style="background-color:#EFEFEF">
 
 <div id="center">
 
-<div style="font-size:75%" id="lastcenter">since 2014-12-31 / last update 2020-04-01</div>
+<div id="title">Today's arXiv</div>
+<iframe src="../titlecontent.html" style="width:100%; height:63; border:none"></iframe>
+<!---<div id="titlecontent">
+<span class="cvitemcontent">e-mail: sehan at kaist.ac.kr<br>
+<a href="http://physics.kaist.ac.kr/">Department of Physics</a><br>
+<a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>-->
+<br>
+<p class="p1">20200401</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.13690">https://arxiv.org/abs/2003.13690</a></span> Charge Transfer Excitations, Pair Density Waves, and Superconductivity in Moir ́e Materials *** (Kevin Slagle, Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.13706">https://arxiv.org/abs/2003.13706</a></span> Many-Body Invariants for Chern and Chiral Hinge Insulators<span class="Apple-converted-space">  </span>*** (Byungmin Kang, Wonjun Lee, Gil Young Cho)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.13945">https://arxiv.org/abs/2003.13945</a></span> Topological term, QCD anomaly, and the η′ chiral soliton lattice in rotating baryonic matter ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.14075">https://arxiv.org/abs/2003.14075</a></span> Three-dimensional monopole-free CPN−1 models ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.13702">https://arxiv.org/abs/2003.13702</a></span> Quantum Hall spin liquids and their possible realization in moiré systems *** (T. Senthil)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.13709">https://arxiv.org/abs/2003.13709</a></span> Phases of frustrated quantum antiferromagnets on the square and triangular lattices *** (Steven Kivelson)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.14305">https://arxiv.org/abs/2003.14305</a></span> Consistent scaling exponents at the deconfined quantum-critical point ****<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.13876">https://arxiv.org/abs/2003.13876</a></span> Higher topological charge and the QCD vacuum<span class="Apple-converted-space"> </span></p>
+	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
+	</div>
+
+<!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
 
 </div>
 </body>
