--- a/arxiv/2020_04_arxiv.html
+++ b/arxiv/2020_04_arxiv.html
@@ -133,7 +133,23 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.13702">https://arxiv.org/abs/2003.13702</a></span> Quantum Hall spin liquids and their possible realization in moiré systems *** (T. Senthil)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.13709">https://arxiv.org/abs/2003.13709</a></span> Phases of frustrated quantum antiferromagnets on the square and triangular lattices *** (Steven Kivelson)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.14305">https://arxiv.org/abs/2003.14305</a></span> Consistent scaling exponents at the deconfined quantum-critical point ****<span class="Apple-converted-space"> </span></p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.13876">https://arxiv.org/abs/2003.13876</a></span> Higher topological charge and the QCD vacuum<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.13876">https://arxiv.org/abs/2003.13876</a></span> Higher topological charge and the QCD vacuum<span class="Apple-converted-space"> </span></p><br>
+<p class="p1">20200402</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.00129">https://arxiv.org/abs/2004.00129</a></span> A novel nonequilibrium state of matter: a d = 4 − ε expansion study of Malthusian flocks<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.00295">https://arxiv.org/abs/2004.00295</a></span> Inhomogeneous phases in the Gross-Neveu model in 1 + 1 dimensions at finite number of flavors<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.00015">https://arxiv.org/abs/2004.00015</a></span> Exotic U(1) Symmetries, Duality, and Fractons in 3 + 1-Dimensional Quantum Field Theory ***** (Nathan Seiberg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.00621">https://arxiv.org/abs/2004.00621</a></span> Bogoliubov Fermi Surfaces in Spin-1/2 Systems: Model Hamiltonians and Experimental Consequences ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.00029">https://arxiv.org/abs/2004.00029</a></span> Paradigm shift for quantum paraelectric: softening of longitudinal modes **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.00039">https://arxiv.org/abs/2004.00039</a></span> Scale symmetry, the Higgs and the cosmos **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.00317">https://arxiv.org/abs/2004.00317</a></span> Gauge dependence of effective average action **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2003.04082">https://arxiv.org/abs/2003.04082</a></span> Weyl semimetals and spinc cobordism ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.00421">https://arxiv.org/abs/2004.00421</a></span> Relations between Clifford algebra and Dirac matrices in the presence of families<span class="Apple-converted-space"> </span></p>
+<p class="p2"><br></p>
+<p class="p1">20200403</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.00638">https://arxiv.org/abs/2004.00638</a></span> Charged Skyrmions and Topological Origin of Superconductivity in Magic Angle Graphene **** (Michael Zaletel, Ashvin Vishwanath)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.00924">https://arxiv.org/abs/2004.00924</a></span> An exact one-loop momentum-dependent Wilsonian renormalization group ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.00635">https://arxiv.org/abs/2004.00635</a></span> Anomalous Diffusion in Dipole- and Higher-Moment Conserving Systems *** (Frank Pollmann, Michael Knap)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.00640">https://arxiv.org/abs/2004.00640</a></span> Field stability of Majorana spin liquids in antiferromagnetic Kitaev models ** (Simon Trebst)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
