--- a/arxiv/2020_04_arxiv.html
+++ b/arxiv/2020_04_arxiv.html
@@ -149,7 +149,51 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.00638">https://arxiv.org/abs/2004.00638</a></span> Charged Skyrmions and Topological Origin of Superconductivity in Magic Angle Graphene **** (Michael Zaletel, Ashvin Vishwanath)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.00924">https://arxiv.org/abs/2004.00924</a></span> An exact one-loop momentum-dependent Wilsonian renormalization group ***</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.00635">https://arxiv.org/abs/2004.00635</a></span> Anomalous Diffusion in Dipole- and Higher-Moment Conserving Systems *** (Frank Pollmann, Michael Knap)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.00640">https://arxiv.org/abs/2004.00640</a></span> Field stability of Majorana spin liquids in antiferromagnetic Kitaev models ** (Simon Trebst)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.00640">https://arxiv.org/abs/2004.00640</a></span> Field stability of Majorana spin liquids in antiferromagnetic Kitaev models ** (Simon Trebst)</p><br>
+<p class="p1">20200406</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.01611">https://arxiv.org/abs/2004.01611</a></span> Edge state critical behavior of the integer quantum Hall transition ** (Thomas Vojta)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.01281">https://arxiv.org/abs/2004.01281</a></span> Eliashberg theory of phonon-mediated superconductivity – when it is valid and how it breaks down ***** (Andrey Chubukov, Steven Kivelson)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.01201">https://arxiv.org/abs/2004.01201</a></span> Thermal and field-induced transitions in ferroquadrupolar Kondo systems *** (SungBin Lee, Yong Baek Kim, Simon Trebst)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.01507">https://arxiv.org/abs/2004.01507</a></span> Exploring anomalies by many-body correlations *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1912.01617">https://arxiv.org/abs/1912.01617</a></span> Random Field Ising Model and Parisi-Sourlas Supersymmetry I. Supersymmetric CFT<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1909.05846">https://arxiv.org/abs/1909.05846</a></span> Emergent spacetime and gravitational Nieh-Yan anomaly in chiral p + ip Weyl superfluids and superconductors<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1908.07671">https://arxiv.org/abs/1908.07671</a></span> Magnetic field induced quantum phases in a tensor network study of Kitaev magnets *** (Hyun-Yong Lee, Yong Baek Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1809.11171">https://arxiv.org/abs/1809.11171</a></span> A Non-Perturbative Definition of the Standard Models (Juven Wang, Xiao-Gang Wen)</p>
+<p class="p2"><br></p>
+<p class="p1">20200407</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.01886">https://arxiv.org/abs/2004.01886</a></span> Real spectra in non-Hermitian topological insulators<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.01716">https://arxiv.org/abs/2004.01716</a></span> Searching for an emergent SU(4) symmetry in real materials<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.01720">https://arxiv.org/abs/2004.01720</a></span> Entanglement Entropy of Generalized Moore-Read Fractional Quantum Hall State Interfaces **(Jeffrey Teo)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1909.05248">https://arxiv.org/abs/1909.05248</a></span> Quantum statistics of vortices from a dual theory of the XY ferromagnet *** (Oleg Techrnyshyov)</p>
+<p class="p2"><br></p>
+<p class="p1">20200408</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.03235">https://arxiv.org/abs/2004.03235</a></span> Square-root higher-order topological insulator on a decorated honeycomb lattice ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.02888">https://arxiv.org/abs/2004.02888</a></span> Open quantum systems and Schwinger-Keldysh holograms ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.02905">https://arxiv.org/abs/2004.02905</a></span> Signatures of quantum phase transitions after quenches in quantum chaotic one-dimensional systems *** (Frank Pollmann)</p>
+<p class="p2"><br></p>
+<p class="p1">20200409</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.03605">https://arxiv.org/abs/2004.03605</a></span> Topological critical states and anomalous electronic transmittance in one dimensional quasicrystals ** (SungBin Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.03735">https://arxiv.org/abs/2004.03735</a></span> Field Theory for Magnetic Monopoles in (Square, Artificial) Spin Ice ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.04148">https://arxiv.org/abs/2004.04148</a></span> Nematicity and Competing Orders in Superconducting Magic-Angle Graphene ****(Yuan Cao, Rafael Fernandes, Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.03617">https://arxiv.org/abs/2004.03617</a></span> Strongly coupled quantum phonon fluid in a solvable model *****(Erez Berg, SYK model)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.04066">https://arxiv.org/abs/2004.04066</a></span> The Superconducting Critical Temperature ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.03613">https://arxiv.org/abs/2004.03613</a></span> Excitonic Laughlin States in Ideal Topological Insulator Flat Bands and Possible Presence in Moir ́e Superlattice Materials<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.03946">https://arxiv.org/abs/2004.03946</a></span> Second-order functional renormalization group approach to quantum wires out of equilibrium **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.04085">https://arxiv.org/abs/2004.04085</a></span> Fermionic Quantum Criticality with enlarged Fluctuation in Dirac Semimetals **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.03771">https://arxiv.org/abs/2004.03771</a></span> Quantum spin operator of the photon<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.04011">https://arxiv.org/abs/2004.04011</a></span> Non-Hermitian extension of the Nambu–Jona-Lasinio model in 3+1 and 1+1 dimensions **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.04018">https://arxiv.org/abs/2004.04018</a></span> On the Hellmann-Feynman theorem in statistical mechanics<span class="Apple-converted-space"> </span></p>
+<p class="p2"><br></p>
+<p class="p1">20200410</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.04168">https://arxiv.org/abs/2004.04168</a></span> Band topology, Hubbard model, Heisenberg model, and Dzyaloshinskii-Moriya interaction in twisted bilayer WSe2 **** (Sankar Das Sarma)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.04679">https://arxiv.org/abs/2004.04679</a></span> Quantum Criticality and Dynamical Kondo Effect in an SU(2) Anderson Lattice Model **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.04415">https://arxiv.org/abs/2004.04415</a></span> Open spin chain realization of topological defect on 1d Ising model and boundary and bulk symmetry ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.04561">https://arxiv.org/abs/2004.04561</a></span> On the general properties of non-linear optical conductivities *** (Haruki Watanabe, Masaki Oshikawa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.04169">https://arxiv.org/abs/2004.04169</a></span> Glide symmetry breaking and Ising criticality in the quasi-1D magnet CoNb2O6 *** (Radu Coldea, S. Parameswaran)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.04181">https://arxiv.org/abs/2004.04181</a></span> Subsystem symmetry enriched topological order in three dimensions ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.04364">https://arxiv.org/abs/2004.04364</a></span> Dynamical time-reversal and inversion symmetry breaking, dimensional crossover, and chiral anomaly in α-(BEDT-TTF)2I3 ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.04612">https://arxiv.org/abs/2004.04612</a></span> Critical behavior of QED3–Gross-Neveu-Yukawa Theory in an Arbitrary Gauge ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.04720">https://arxiv.org/abs/2004.04720</a></span> Lecture notes on the Gaussian Free Field<span class="Apple-converted-space"> </span></p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
