--- a/arxiv/2020_04_arxiv.html
+++ b/arxiv/2020_04_arxiv.html
@@ -193,7 +193,43 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.04181">https://arxiv.org/abs/2004.04181</a></span> Subsystem symmetry enriched topological order in three dimensions ***</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.04364">https://arxiv.org/abs/2004.04364</a></span> Dynamical time-reversal and inversion symmetry breaking, dimensional crossover, and chiral anomaly in α-(BEDT-TTF)2I3 ***</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.04612">https://arxiv.org/abs/2004.04612</a></span> Critical behavior of QED3–Gross-Neveu-Yukawa Theory in an Arbitrary Gauge ***</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.04720">https://arxiv.org/abs/2004.04720</a></span> Lecture notes on the Gaussian Free Field<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.04720">https://arxiv.org/abs/2004.04720</a></span> Lecture notes on the Gaussian Free Field<span class="Apple-converted-space"> </span></p><br>
+<p class="p1">20200413</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2004.04744.pdf">https://arxiv.org/pdf/2004.04744.pdf</a></span> Fractal non-Fermi liquids from Moire-Hofstadter phonons ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2004.04929.pdf">https://arxiv.org/pdf/2004.04929.pdf</a></span> Boundary entropy under ambient RG flow in the AdS/BCFT model<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2004.04751.pdf">https://arxiv.org/pdf/2004.04751.pdf</a></span> Renyi entanglement entropy of Fermi liquids and non-Fermi liquids: Sachdev-Ye-Kitaev model and dynamical mean field theories *** (SYK model)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2004.04941.pdf">https://arxiv.org/pdf/2004.04941.pdf</a></span> Inter-orbital p- and d-wave pairings between dxz/yz and dxy orbitals in Sr2RuO4<span class="Apple-converted-space"> </span></p>
+<p class="p2"><br></p>
+<p class="p1">20200414</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2004.05504.pdf">https://arxiv.org/pdf/2004.05504.pdf</a></span> Topological insulators and higher-order topological insulators from gauge-invariant 1D lines (Kai Sun)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2004.05690.pdf">https://arxiv.org/pdf/2004.05690.pdf</a></span> Dynamic response functions of two-dimensional Dirac fermions with screened Coulomb and short-range interactions *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2004.05558.pdf">https://arxiv.org/pdf/2004.05558.pdf</a></span> Polariton-polariton interaction beyond the Born approximation: A toy model study<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2004.05577.pdf">https://arxiv.org/pdf/2004.05577.pdf</a></span> Non-Hermitian Ferromagnetism in an Ultracold Fermi Gas<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2004.05177.pdf">https://arxiv.org/pdf/2004.05177.pdf</a></span> Dissipation-assisted operator evolution method for capturing hydrodynamic transport *** (Frank Pollmann)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2004.05313.pdf">https://arxiv.org/pdf/2004.05313.pdf</a></span> Comment on “Chaotic-Integrable Transition in the Sachdev-Ye-Kitaev Model” ** (Jaewon Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2004.05339.pdf">https://arxiv.org/pdf/2004.05339.pdf</a></span> Entanglement Entropy and its Quench Dynamics for Pure States of the Sachdev-Ye-Kitaev model<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2004.05182.pdf">https://arxiv.org/pdf/2004.05182.pdf</a></span> Linear in temperature resistivity in the limit of zero temperature from the time reparameterization soft mode *** (Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2004.05633.pdf">https://arxiv.org/pdf/2004.05633.pdf</a></span> Topological phase transition and nontrivial thermal Hall signatures in honeycomb lattice magnets *** (Gang Chen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2004.06074.pdf">https://arxiv.org/pdf/2004.06074.pdf</a></span> Spin-nematic order in the spin-1/2 Kitaev-Gamma chain *** (Hae-Young Kee, Ian Affleck)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/1807.02181.pdf">https://arxiv.org/pdf/1807.02181.pdf</a></span> The Conformal Anomaly and a new Exact RG<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2004.05780.pdf">https://arxiv.org/pdf/2004.05780.pdf</a></span> Fermi Condensation induced by Weyl Anomaly<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2004.05183.pdf">https://arxiv.org/pdf/2004.05183.pdf</a></span> Volumes And Random Matrices *** (Edward Witten)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/1907.03363.pdf">https://arxiv.org/pdf/1907.03363.pdf</a></span> JT Gravity and the Ensembles of Random Matrix Theory *** (Douglas Stanford, Edward Witten)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/1605.01729.pdf">https://arxiv.org/pdf/1605.01729.pdf</a></span> A Conformal Fixed-Point Equation for the Effective Average Action<span class="Apple-converted-space"> </span></p>
+<p class="p2"><br></p>
+<p class="p1">20200415</p>
+<p class="p3"><a href="https://arxiv.org/pdf/2004.06257.pdf">https://arxiv.org/pdf/2004.06257.pdf</a><span class="s2"> Kitaev-Anderson spin liquid **</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2004.06141.pdf">https://arxiv.org/pdf/2004.06141.pdf</a></span> Entanglement Clustering for ground-stateable quantum many-body states *** (Yi Zhang, Senthil, Eun-Ah Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2004.06646.pdf">https://arxiv.org/pdf/2004.06646.pdf</a></span> Connecting the SYK dots *** (SYK model)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2004.06666.pdf">https://arxiv.org/pdf/2004.06666.pdf</a></span> FRACTIONAL QUANTUM NUMBERS, COMPLEX ORBIFOLDS AND NONCOMMUTATIVE GEOMETRY<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2004.06134.pdf">https://arxiv.org/pdf/2004.06134.pdf</a></span> Tunneling in Fermi Systems with Quadratic Band Crossing Points *** (Ipsita Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2004.06314.pdf">https://arxiv.org/pdf/2004.06314.pdf</a></span> Critical analysis of two-dimensional classical XY model using tensor renormalization group<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2004.06654.pdf">https://arxiv.org/pdf/2004.06654.pdf</a></span> Normalized Gaussian Path Integrals<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2004.06458.pdf">https://arxiv.org/pdf/2004.06458.pdf</a></span> General Lieb-Schultz-Mattis type theorems for quantum spin chains *** (Hal Tasaki)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2004.06543.pdf">https://arxiv.org/pdf/2004.06543.pdf</a></span> Breakdown of emergent Lifshitz symmetry in holographic matter with Harris-marginal disorder *** (Andrew Lucas)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2004.06115.pdf">https://arxiv.org/pdf/2004.06115.pdf</a></span> Exotic ZN Symmetries, Duality, and Fractons in 3 + 1-Dimensional Quantum Field Theory ***** (Nathan Seiberg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2004.06119.pdf">https://arxiv.org/pdf/2004.06119.pdf</a></span> Identification of a Kitaev Quantum Spin Liquid by Magnetic Field Angle Dependence ***** (Ara Go, Kyusung Hwang, Ji Heon Seong, Takasada Shibauchi, Eun-Gook Moon)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2004.05182.pdf">https://arxiv.org/pdf/2004.05182.pdf</a></span> Linear in temperature resistivity in the limit of zero temperature from the time reparameterization soft mode *** (Subir Sachdev)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
