--- a/arxiv/2020_04_arxiv.html
+++ b/arxiv/2020_04_arxiv.html
@@ -244,7 +244,24 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.07796">https://arxiv.org/abs/2004.07796</a></span> Detecting many-body Bell non-locality by solving Ising models<span class="Apple-converted-space"> </span></p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.07251">https://arxiv.org/abs/2004.07251</a></span> Designer non-Abelian fractons from topological layers ***(Meng Cheng)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.07569">https://arxiv.org/abs/2004.07569</a></span> Thermodynamic and Transport Properties in Disordered Kitaev Models *** (Joji Nasu, Yukitoshi Motome)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.07361">https://arxiv.org/abs/2004.07361</a></span> Renormalization of group field theories for quantum gravity: new scaling results and some suggestions *** (Daniele Oriti)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.07361">https://arxiv.org/abs/2004.07361</a></span> Renormalization of group field theories for quantum gravity: new scaling results and some suggestions *** (Daniele Oriti)</p><br>
+<p class="p1">20200420</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.08086">https://arxiv.org/abs/2004.08086</a></span> Superconductivity induced by fluctuations of momentum-based multipoles ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.07852">https://arxiv.org/abs/2004.07852</a></span> Continuous N ́eel-VBS Quantum Phase Transition in Non-Local one-dimensional systems with SO(3) Symmetry **** (Chao-Ming Jian, Yichen Xu, Xiao-Chuan Wu, Cenke Xu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.07897">https://arxiv.org/abs/2004.07897</a></span> Intertwined density waves in a metallic nickelate<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.08300">https://arxiv.org/abs/2004.08300</a></span> Thermodynamic signatures of an antiferromagnetic quantum critical point inside a superconducting dome *** (Andrey Chubukov, Rafael Fernandes)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1510.08787">https://arxiv.org/abs/1510.08787</a></span> Murray Gell-Mann: A Short Appreciation ** (Jame Hartle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.08210">https://arxiv.org/abs/2004.08210</a></span> A Class of Models with the Potential to Represent Fundamental Physics *** (Stephen Wolfram)</p>
+<p class="p2"><br></p>
+<p class="p1">20200421</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.09021">https://arxiv.org/abs/2004.09021</a></span> Dynamic crystallization in a quantum Ising chain<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.09489">https://arxiv.org/abs/2004.09489</a></span> High-throughput screening for Weyl Semimetals with S4 Symmetry *** (Zhong Fang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.08931">https://arxiv.org/abs/2004.08931</a></span> Emergent symmetry and near-field chirality in twisted bilayer graphene *** (Gonzalez)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.09414">https://arxiv.org/abs/2004.09414</a></span> Quantum phase transitions in Dirac fermion systems *** (Joseph Maciejko)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.05181">https://arxiv.org/abs/2004.05181</a></span> How non-Fermi liquids cure their infrared divergences ******</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2004.09080">https://arxiv.org/abs/2004.09080</a></span> Notes on multiple superconducting phases in UTe2 —Third transition—<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2002.01947">https://arxiv.org/abs/2002.01947</a></span> Gauge theories for the thermal Hall effect ***** (Subir Sachdev)</p>
+<p class="p3"><a href="https://arxiv.org/abs/2004.09254">https://arxiv.org/abs/2004.09254</a><span class="s2"> The Noether Theorems in Context</span></p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
