--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ Articles related to my works:
 		<span class="cvitem"> Korea Advanced Institute of Science and Technology</span>, Daejeon, Korea
 		<span class="cvperiod">March 2013 ~ Present</span>
 		</div>
-		<div class="cvitemcontent"> Candidate of Integrated Master's and Ph.D Program in Physics</div>
+		<div class="cvitemcontent"> Candidate of Integrated Master's and Ph.D Program in Physics (Expected graduation date: August 2020)</div>
 		<!--<div class="cvitemcontent"> Cumulative GPA : 4.16/4.3</div>-->
 		</li><li>
 		<div>
